--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.55.0",
+    "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.5.1",
     "tailwind-merge": "^3.2.0",
     "zod": "^3.24.3"
